# Generated by Django 3.2.25 on 2025-01-31 18:05

from django.db import migrations


def assign_top_themes(apps, schema_editor):
    Theme = apps.get_model("layers", "Theme")
    ChildOrder = apps.get_model("layers", "ChildOrder")
    ContentType = apps.get_model("contenttypes", "ContentType")
    themeContentType = ContentType.objects.get_for_model(Theme)
    themeOrders = ChildOrder.objects.filter(content_type=themeContentType)
    subtheme_ids = [x.object_id for x in themeOrders]
    top_level_themes =  Theme.objects.exclude(pk__in=subtheme_ids).exclude(display_name="Companion").filter(is_visible=True).order_by('order', 'name')
    for theme in top_level_themes:
        theme.is_top_theme = True
        theme.save()

class Migration(migrations.Migration):

    dependencies = [
        ('layers', '0018_auto_20250131_1742'),
    ]

    operations = [
        migrations.RunPython(assign_top_themes)
    ]
